feat(heif): add write support